Moved default banner, added if statements in board_index.html

--- a/flyboard/templates/_layout.html
+++ b/flyboard/templates/_layout.html
@@ -6,13 +6,215 @@
         <script type="text/javascript" src="/static/js/jquery-3.3.1.js"></script>
         <script type="text/javascript" src="/static/js/jquery-fieldselection.js"></script>
         <script type="text/javascript" src="/static/js/js.cookie.js"></script>
-        <script type="text/javascript" src="/static/js/flyboard-board.js"></script>
-        <script type="text/javascript" src="/static/js/flyboard-auth.js"></script>
+        {% if board %}
+        <!-- Boards -->
+        <script type="text/javascript">
+            let minThreadFileNumber = {{ board.min_files }};
+            let maxThreadFileNumber = {{ board.max_files }};
+            let fileCounter = 0;
+
+            $(document).ready(function() {
+                function makePassword() {
+                    var text = "";
+                    var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()-=_+[]{};':\",./<>?\\|";
+
+                    for (var i = 0; i < 16; i++) {
+                        text += possible.charAt(Math.floor(Math.random() * possible.length));
+                    }
+
+                    return text;
+                }
+
+                $('.cloak').click(function(e) {
+                    if (e.target != this) {
+                        return;
+                    }
+
+                    $('.cloak').hide();
+                });
+
+                $('.panel-exit-button').click(function() {
+                    $('.cloak').hide();
+                })
+
+                $('.login-button').click(function() {
+                    $('.cloak').show();
+                });
+
+                // Start new thread button action
+                $('#start-thread-link').click(function() {
+                    $('#start-thread-wrapper').hide();
+                    $('#no-thread-wrapper').show();
+                    $('#new-thread-creator').show();
+                });
+
+                $('#no-thread-link').click(function() {
+                    $('#start-thread-wrapper').show();
+                    $('#no-thread-wrapper').hide();
+                    $('#new-thread-creator').hide();
+                });
+
+                // Add BBCode tags
+                function addTag(tag) {
+                    let selection = $('#message-input').getSelection();
+                    let text = $('#message-input').val();
+
+                    $('#message-input').val(
+                        text.slice(0, selection.start) + "[" + tag + "]" + selection.text + "[/" + tag + "]" + text.slice(selection.end)
+                    );
+                }
+
+                // BBCode buttons
+                $('#bold-btn').click(function() {
+                    addTag("b");
+                });
+                $('#italic-btn').click(function() {
+                    addTag("i");
+                });
+                $('#underline-btn').click(function() {
+                    addTag("u");
+                });
+                $('#code-btn').click(function() {
+                    addTag("code");
+                });
+                $('#spoiler-btn').click(function() {
+                    addTag("spoiler");
+                });
+
+                // Clear button
+                $('#clear-btn').click(function() {
+                    $('#name-input').val("");
+                    $('#email-input').val("");
+                    $('#subject-input').val("");
+                    $('#message-input').val("");
+                    $('#embed-input').val("");
+                });
+
+                // Save password on change
+                $('#password-input').change(function() {
+                    let password = $('#password-input').val();
+                    Cookies.set("user_password", password);
+                });
+
+                // Generate password cookie if none
+                $('#password-input').val(function() {
+                    let passwordCookie = Cookies.get("user_password");
+                    
+                    if (!passwordCookie) {
+                        let password = makePassword();
+                        Cookies.set("user_password", password);
+                        return password;
+                    } else {
+                        return passwordCookie;
+                    }
+                });
+
+                function loadButtons() {
+                    $('#image-btn-separator').hide();
+                    if (fileCounter <= minThreadFileNumber) {
+                        $('#add-image-btn').show();
+                        $('#remove-image-btn').hide();
+                    } else if (fileCounter >= maxThreadFileNumber) {
+                        $('#add-image-btn').hide();
+                        $('#remove-image-btn').show();
+                    } else {
+                        $('#image-btn-separator').show();
+                        $('#add-image-btn').show();
+                        $('#remove-image-btn').show();
+                    }
+                    
+                    if (minThreadFileNumber == maxThreadFileNumber) {
+                        $('#image-buttons').hide();
+                    }
+                }
+
+                // Add image
+                $('#add-image-btn').click(function() {
+                    fileCounter++;
+                    let fileBoxId = "#file-box-" + fileCounter;
+
+                    $('<div/>', {id: fileBoxId, class: "file-box" }).insertBefore('#image-buttons');
+                    
+                    $('<input/>', {
+                        type: "file",
+                        id: "file-input-" + fileCounter,
+                    }).appendTo('.file-box:nth-of-type(' + fileCounter + ')');
+                    $('<input/>', {
+                        type: "checkbox",
+                        id: "image-" + fileCounter + "-spoiler-checkbox",
+                    }).appendTo('.file-box:nth-of-type(' + fileCounter + ')');
+                    $('<label for="image-' + fileCounter +'-spoiler-checkbox">Spoiler image</label>').appendTo('.file-box:nth-of-type(' + fileCounter + ')');
+
+                    loadButtons();
+                });
+
+                $('#remove-image-btn').click(function() {
+                    $('#image-buttons').prev().remove();
+                    fileCounter--;
+                    loadButtons();
+                });
+
+                loadButtons();
+
+                for (var i = 0; i < minThreadFileNumber; i++) {
+                    $('#add-image-btn').click();
+                }
+
+                $('#new-thread-creator').hide();
+                $('#no-thread-wrapper').hide();
+            });
+        </script>
+        <!-- Auth -->
+        {% endif %}
         <script type="text/javascript">
             $(document).ready(function() {
-                initAuth({{ g.messages|tojson }}, {
-                    "auth.login": "{{ url_for('auth.login') }}",
-                    "auth.logout": "{{ url_for('auth.logout') }}",
+                $('.logout-button').click(function(){
+                    $.ajax({
+                        url: "{{ url_for('auth.logout') }}",
+                        type: "POST",
+                        success: function() {
+                            location.reload();
+                        },
+                        error: function(response) {
+                            alert('{{ g.messages["something_went_wrong"] }}')
+                        }
+                    })
+                });
+
+                $('#login-btn').click(function() {
+                    let username = $('#login-username-input').val();
+                    let password = $('#login-password-input').val();
+
+                    if (!username) {
+                        alert('{{ g.messages["username_please"] }}');
+                        return;
+                    } else if (!password) {
+                        alert('{{ g.messages["password_please"] }}');
+                        return;
+                    }
+
+                    let loginData = {
+                        "username": username,
+                        "password": password
+                    }
+
+                    $.ajax({
+                        url: "{{ url_for('auth.login') }}",
+                        type: "POST",
+                        contentType: "application/json",
+                        dataType: "json",
+                        data: JSON.stringify(loginData),
+                        success: function(response) {
+                            if (response['valid'] == false) {
+                                alert(response['message']);
+                                return;
+                            }
+                            location.reload();
+                        },
+                        error: function(response) {
+                            alert('{{ g.messages["something_went_wrong"] }}');
+                        }
+                    });
                 });
             });
         </script>
