--- a/flyboard/templates/__bar_content.html
+++ b/flyboard/templates/__bar_content.html
@@ -18,7 +18,7 @@
     {% if g.user.is_authenticated %}
         <a href="#" class="glyphicon glyphicon-off logout-button" onclick="return false;" title="{{ g.messages['log_out'] }}"></a>
         {% if g.user.has_permission('flyboard.mod.panel_access') %}
-            <a href="#" class="glyphicon glyphicon-wrench mod-panel-button" onclick="return false;" title="{{ g.messages['mod_panel'] }}"></a>
+            <a href="{{ url_for('mod.panel') }}" class="glyphicon glyphicon-wrench mod-panel-button" title="{{ g.messages['mod_panel'] }}"></a>
         {% endif %}
     {% endif %}
     <a href="#" class="glyphicon glyphicon-search search-button" onclick="return false;" title="{{ g.messages['search'] }}"></a>
